--- a/WriteUp/ECE6254_references.bib
+++ b/WriteUp/ECE6254_references.bib
@@ -100,3 +100,11 @@
 	author={Fernandez, Alberto and Garcia, Salvador and Herrera, Francisco and Chawla, Nitesh V.}, 
 	year={2018}, month={Apr}
 } 
+
+
+@ARTICLE{ensembles_review,
+	author={M. {Galar} and A. {Fernandez} and E. {Barrenechea} and H. {Bustince} and F. {Herrera}},  
+	journal={IEEE Transactions on Systems, Man, and Cybernetics, Part C (Applications and Reviews)},   
+	title={A Review on Ensembles for the Class Imbalance Problem: Bagging-, Boosting-, and Hybrid-Based Approaches},   		year={2012},  volume={42},  number={4},  pages={463-484},  
+	doi={10.1109/TSMCC.2011.2161285}
+}
