--- a/WriteUp/report.tex
+++ b/WriteUp/report.tex
@@ -21,7 +21,7 @@
 
 % Math font
 %\usepackage{mathpazo}
-\usepackage{fourier} 
+%\usepackage{fourier} 
 
 % Enable subfigures
 \graphicspath{ {./pictures/} }
@@ -226,7 +226,10 @@ where $p$ and $p'$ denote the posterior probability of encountering a sample fro
 \section{Classification impact on Real Data}
 Ensemble Classifiers are known to improve the performance of single classifiers in imbalanced datasets [A Review on Ensembles for the Class Imbalance] by combining separate weak learners into a composite whole. Both bagging and boosting algorithms have been implemented from scratch to explore their advantages and compare them with highly-effective classifiers such as XGBoost. 
 	\textcolor{red}{Check this}
-As we have stated, in recent years, Ensemble Classifiers have arisen as a possible solution to the class imbalance problem attracting great interest among researchers [45], [47], [50], [62].
+As we have stated, in recent years, Ensemble Classifiers have arisen as a possible solution to the class imbalance problem attracting great interest among researchers [45], [47], [50], [62]. 
+
+	\medskip
+	Cita Fondo Flamenco: \cite{ensembles_review}
 %https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=5978225
 
 \subsection{Bagging}
