New additions to repotr

--- a/WriteUp/report.tex
+++ b/WriteUp/report.tex
@@ -32,7 +32,7 @@
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \begin{document}
 
-\title{Imbalanced Dataset Techniques to improve Classification of Uneven Class Distributions\\
+\title{Imbalanced Dataset Techniques to Improve Classification of Uneven Class Distributions\\
 }
 
 \author{\IEEEauthorblockN{Miguel Jiménez Aparicio}
