Adding paragraph in introduction + rearraging figures

--- a/WriteUp/ECE6254_references.bib
+++ b/WriteUp/ECE6254_references.bib
@@ -1,110 +1,135 @@
-@INPROCEEDINGS{data_imbalance_overview,  
-	author={V. S. {Spelmen} and R. {Porkodi}},  
-	booktitle={2018 International Conference on Current Trends towards Converging Technologies (ICCTCT)},   
-	title={A Review on Handling Imbalanced Data},   
-	year={2018},  volume={},  number={},  pages={1-11},  
-	doi={10.1109/ICCTCT.2018.8551020}
-}
+%% This BibTeX bibliography file was created using BibDesk.
+%% https://bibdesk.sourceforge.io/
 
-@InProceedings{undersampling1,
-	author="Dal Pozzolo, Andrea
-	and Caelen, Olivier
-	and Bontempi, Gianluca",
-	editor="Appice, Annalisa
-	and Rodrigues, Pedro Pereira
-	and Santos Costa, V{\'i}tor
-	and Soares, Carlos
-	and Gama, Jo{\~a}o
-	and Jorge, Al{\'i}pio",
-	title="When is Undersampling Effective in Unbalanced Classification Tasks?",
-	booktitle="Machine Learning and Knowledge Discovery in Databases",
-	year="2015",
-	publisher="Springer International Publishing",
-	address="Cham",
-	pages="200--215",
-	isbn="978-3-319-23528-8"
-}
+%% Created for Cristian  at 2020-11-28 22:25:03 -0500 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@inproceedings{10.1007/978-3-540-39804-2_12,
+	Abstract = {Many real world data mining applications involve learning from imbalanced data sets. Learning from data sets that contain very few instances of the minority (or interesting) class usually produces biased classifiers that have a higher predictive accuracy over the majority class(es), but poorer predictive accuracy over the minority class. SMOTE (Synthetic Minority Over-sampling TEchnique) is specifically designed for learning from imbalanced data sets. This paper presents a novel approach for learning from imbalanced data sets, based on a combination of the SMOTE algorithm and the boosting procedure. Unlike standard boosting where all misclassified examples are given equal weights, SMOTEBoost creates synthetic examples from the rare or minority class, thus indirectly changing the updating weights and compensating for skewed distributions. SMOTEBoost applied to several highly and moderately imbalanced data sets shows improvement in prediction performance on the minority class and overall improved F-values.},
+	Address = {Berlin, Heidelberg},
+	Author = {Chawla, Nitesh V. and Lazarevic, Aleksandar and Hall, Lawrence O. and Bowyer, Kevin W.},
+	Booktitle = {Knowledge Discovery in Databases: PKDD 2003},
+	Date-Added = {2020-11-28 22:24:29 -0500},
+	Date-Modified = {2020-11-28 22:24:29 -0500},
+	Editor = {Lavra{\v{c}}, Nada and Gamberger, Dragan and Todorovski, Ljup{\v{c}}o and Blockeel, Hendrik},
+	Isbn = {978-3-540-39804-2},
+	Pages = {107--119},
+	Publisher = {Springer Berlin Heidelberg},
+	Title = {SMOTEBoost: Improving Prediction of the Minority Class in Boosting},
+	Year = {2003}}
+
+@inproceedings{data_imbalance_overview,
+	Author = {V. S. {Spelmen} and R. {Porkodi}},
+	Booktitle = {2018 International Conference on Current Trends towards Converging Technologies (ICCTCT)},
+	Doi = {10.1109/ICCTCT.2018.8551020},
+	Pages = {1-11},
+	Title = {A Review on Handling Imbalanced Data},
+	Year = {2018},
+	Bdsk-Url-1 = {https://doi.org/10.1109/ICCTCT.2018.8551020}}
+
+@inproceedings{undersampling1,
+	Address = {Cham},
+	Author = {Dal Pozzolo, Andrea and Caelen, Olivier and Bontempi, Gianluca},
+	Booktitle = {Machine Learning and Knowledge Discovery in Databases},
+	Editor = {Appice, Annalisa and Rodrigues, Pedro Pereira and Santos Costa, V{\'\i}tor and Soares, Carlos and Gama, Jo{\~a}o and Jorge, Al{\'\i}pio},
+	Isbn = {978-3-319-23528-8},
+	Pages = {200--215},
+	Publisher = {Springer International Publishing},
+	Title = {When is Undersampling Effective in Unbalanced Classification Tasks?},
+	Year = {2015}}
 
 @article{undersampling2,
-	title={Learning When Training Data are Costly: The Effect of Class Distribution on Tree Induction}, 
-	volume={19}, DOI={10.1613/jair.1199}, 
-	journal={Journal of Artificial Intelligence Research}, 
-	author={Weiss, G. M. and Provost, F.}, 
-	year={2003}, pages={315–354}
-} 
+	Author = {Weiss, G. M. and Provost, F.},
+	Doi = {10.1613/jair.1199},
+	Journal = {Journal of Artificial Intelligence Research},
+	Pages = {315--354},
+	Title = {Learning When Training Data are Costly: The Effect of Class Distribution on Tree Induction},
+	Volume = {19},
+	Year = {2003},
+	Bdsk-Url-1 = {https://doi.org/10.1613/jair.1199}}
 
-@inproceedings{undersampling3, 
-	author = {Cui, Ying-Jin and Davis, S. and Cheng, Chao-Kun and Bai, Xue},
-	year = {2004},
-	month = {09},
-	pages = {3444 - 3448 vol.6},
-	title = {A study of sample size with neural network},
-	volume = {6},
-	isbn = {0-7803-8403-2},
-	journal = {Proceedings of 2004 International Conference on Machine Learning and Cybernetics},
-	doi = {10.1109/ICMLC.2004.1380382}
-}
+@inproceedings{undersampling3,
+	Author = {Cui, Ying-Jin and Davis, S. and Cheng, Chao-Kun and Bai, Xue},
+	Doi = {10.1109/ICMLC.2004.1380382},
+	Isbn = {0-7803-8403-2},
+	Journal = {Proceedings of 2004 International Conference on Machine Learning and Cybernetics},
+	Month = {09},
+	Pages = {3444 - 3448 vol.6},
+	Title = {A study of sample size with neural network},
+	Volume = {6},
+	Year = {2004},
+	Bdsk-Url-1 = {https://doi.org/10.1109/ICMLC.2004.1380382}}
 
-@ARTICLE{undersampling_generalization,  
-	author={M. {Wasikowski} and X. {Chen}},  
-	journal={IEEE Transactions on Knowledge and Data Engineering},  
-	title={Combating the Small Sample Class Imbalance Problem Using Feature Selection},   
-	year={2010},  
-	volume={22},  number={10},  pages={1388-1400},  
-	doi={10.1109/TKDE.2009.187}
-}
+@article{undersampling_generalization,
+	Author = {M. {Wasikowski} and X. {Chen}},
+	Doi = {10.1109/TKDE.2009.187},
+	Journal = {IEEE Transactions on Knowledge and Data Engineering},
+	Number = {10},
+	Pages = {1388-1400},
+	Title = {Combating the Small Sample Class Imbalance Problem Using Feature Selection},
+	Volume = {22},
+	Year = {2010},
+	Bdsk-Url-1 = {https://doi.org/10.1109/TKDE.2009.187}}
 
 @inbook{notes_chap2,
-	place={Atlanta, Georgia}, 
-	title={Introduction to Supervised Learning Theory}, 
-	booktitle={ECE 6254 - Statistical Machine Learning}, 
-	publisher={Georgia Institute of Technology},
-	author={Bloch, Matthieu R}, 
-	year={2020}, pages={1–8}
-} 
+	Author = {Bloch, Matthieu R},
+	Booktitle = {ECE 6254 - Statistical Machine Learning},
+	Pages = {1--8},
+	Place = {Atlanta, Georgia},
+	Publisher = {Georgia Institute of Technology},
+	Title = {Introduction to Supervised Learning Theory},
+	Year = {2020}}
 
-@INPROCEEDINGS{undersampling_posterior,  
-	author={A. D. {Pozzolo} and O. {Caelen} and R. A. {Johnson} and G. {Bontempi}},  
-	booktitle={2015 IEEE Symposium Series on Computational Intelligence},   
-	title={Calibrating Probability with Undersampling for Unbalanced Classification},
-   	year={2015},  
-	volume={}, 
-	pages={159-166},  
-	doi={10.1109/SSCI.2015.33}
-}
+@inproceedings{undersampling_posterior,
+	Author = {A. D. {Pozzolo} and O. {Caelen} and R. A. {Johnson} and G. {Bontempi}},
+	Booktitle = {2015 IEEE Symposium Series on Computational Intelligence},
+	Doi = {10.1109/SSCI.2015.33},
+	Pages = {159-166},
+	Title = {Calibrating Probability with Undersampling for Unbalanced Classification},
+	Year = {2015},
+	Bdsk-Url-1 = {https://doi.org/10.1109/SSCI.2015.33}}
 
-@book{sampling_bias, 
-	place={Cambridge, Mass}, 
-	title={Dataset shift in machine learning}, 
-	publisher={MIT}, 
-	author={Quiñonero-Candela Joaquin}, 
-	year={2009}
-} 
+@book{sampling_bias,
+	Author = {Qui{\~n}onero-Candela Joaquin},
+	Place = {Cambridge, Mass},
+	Publisher = {MIT},
+	Title = {Dataset shift in machine learning},
+	Year = {2009}}
 
 @article{clonning,
-	title = "An empirical comparison and evaluation of minority oversampling techniques on a large number of imbalanced datasets",
-	journal = "Applied Soft Computing",
-	volume = "83",
-	pages = "105662",
-	year = "2019",
-	issn = "1568-4946",
-	doi = "https://doi.org/10.1016/j.asoc.2019.105662",
-	url = "http://www.sciencedirect.com/science/article/pii/S1568494619304429",
-	author = "György Kovács",
-	keywords = "Imbalanced learning, SMOTE, Minority oversampling, SMOTE variants",
-}
+	Author = {Gy{\"o}rgy Kov{\'a}cs},
+	Doi = {https://doi.org/10.1016/j.asoc.2019.105662},
+	Issn = {1568-4946},
+	Journal = {Applied Soft Computing},
+	Keywords = {Imbalanced learning, SMOTE, Minority oversampling, SMOTE variants},
+	Pages = {105662},
+	Title = {An empirical comparison and evaluation of minority oversampling techniques on a large number of imbalanced datasets},
+	Url = {http://www.sciencedirect.com/science/article/pii/S1568494619304429},
+	Volume = {83},
+	Year = {2019},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S1568494619304429},
+	Bdsk-Url-2 = {https://doi.org/10.1016/j.asoc.2019.105662}}
 
-@misc{smote, 
-	title={SMOTE for Learning from Imbalanced Data: Progress and Challenges, Marking the 15-year Anniversary},
-	url={https://jair.org/index.php/jair/article/view/11192}, journal={Journal of Artificial Intelligence Research},
-	author={Fernandez, Alberto and Garcia, Salvador and Herrera, Francisco and Chawla, Nitesh V.}, 
-	year={2018}, month={Apr}
-} 
+@misc{smote,
+	Author = {Fernandez, Alberto and Garcia, Salvador and Herrera, Francisco and Chawla, Nitesh V.},
+	Journal = {Journal of Artificial Intelligence Research},
+	Month = {Apr},
+	Title = {SMOTE for Learning from Imbalanced Data: Progress and Challenges, Marking the 15-year Anniversary},
+	Url = {https://jair.org/index.php/jair/article/view/11192},
+	Year = {2018},
+	Bdsk-Url-1 = {https://jair.org/index.php/jair/article/view/11192}}
 
-
-@ARTICLE{ensembles_review,
-	author={M. {Galar} and A. {Fernandez} and E. {Barrenechea} and H. {Bustince} and F. {Herrera}},  
-	journal={IEEE Transactions on Systems, Man, and Cybernetics, Part C (Applications and Reviews)},   
-	title={A Review on Ensembles for the Class Imbalance Problem: Bagging-, Boosting-, and Hybrid-Based Approaches},   		year={2012},  volume={42},  number={4},  pages={463-484},  
-	doi={10.1109/TSMCC.2011.2161285}
-}
+@article{ensembles_review,
+	Author = {M. {Galar} and A. {Fernandez} and E. {Barrenechea} and H. {Bustince} and F. {Herrera}},
+	Doi = {10.1109/TSMCC.2011.2161285},
+	Journal = {IEEE Transactions on Systems, Man, and Cybernetics, Part C (Applications and Reviews)},
+	Number = {4},
+	Pages = {463-484},
+	Title = {A Review on Ensembles for the Class Imbalance Problem: Bagging-, Boosting-, and Hybrid-Based Approaches},
+	Volume = {42},
+	Year = {2012},
+	Bdsk-Url-1 = {https://doi.org/10.1109/TSMCC.2011.2161285}}
